Knot Resolver 5.x.y (2021-0m-dd)
================================

Bugfixes
--------
- trust_anchors.set_insecure: improve precision (#673, !1177)


Knot Resolver 5.3.2 (2021-05-05)
================================

Security
--------
- validator: fix 5.3.1 regression on over-limit NSEC3 edge case (!1169)
  Assertion might be triggered by query/answer, potentially DoS.

Improvements
------------
- cache: improve handling write errors from LMDB (!1159)
- doh2: improve handling of stream errors (!1164)

Bugfixes
--------
- dnstap module: fix repeated configuration (!1168)
- validator: fix SERVFAIL for some rare dynamic proofs (!1166)
- fix SIGBUS on uncommon ARM machines (unaligned access; !1167, #426)
- cache: better resilience on abnormal termination/restarts (!1172)
- doh2: fix memleak on stream write failures (!1161)


Knot Resolver 5.3.1 (2021-03-31)
================================

Improvements
------------
- policy.STUB: try to avoid TCP (compared to 5.3.0; !1155)
- validator: downgrade NSEC3 records with too many iterations (>150; !1160)
- additional improvements to nameserver selection algorithm (!1154, !1150)

Bugfixes
--------
- dnstap module: don't break request resolution on dnstap errors (!1147)
- cache garbage collector: fix crashes introduced in 5.3.0 (!1153)
- policy.TLS_FORWARD: better avoid dead addresses (#671, !1156)


Knot Resolver 5.3.0 (2021-02-25)
================================

Improvements
------------
- more consistency in using parent-side records for NS addresses (!1097)
- better algorithm for choosing nameservers (!1030, !1126, !1140, !1141, !1143)
- daf module: add daf.clear() (!1114)
- dnstap module: more features and don't log internal requests (!1103)
- dnstap module: include in upstream packages and Docker image (!1110, !1118)
- randomize record order by default, i.e. reorder_RR(true) (!1124)
- prometheus module: transform graphite tags into prometheus labels (!1109)
- avoid excessive logging of UDP replies with sendmmsg (!1138)
